deploy/manifests/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: kuberos
  labels:
    app.kubernetes.io/name: kuberos
