deploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: kuberos
  name: kuberos
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: kuberos
  type: ClusterIP
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8080
